syntax = "proto3";

import "google/protobuf/empty.proto";

package ingress;

service Ingress {
  rpc SavePerson (PersonRequest) returns (google.protobuf.Empty) {}
  rpc SaveOpd (OpdRequest) returns (google.protobuf.Empty) {}
}

message PersonRequest {

  message Person {
    string hospcode = 1;
    string hn = 2;
    string cid = 3;
    string title = 4;
    string fname = 5;
    string lname = 6;
    string birth = 7;
    string sex = 8;
    string marriage = 9;
    string occupation = 10;
    string nation = 11;
    string idtype = 12;
    string changwat = 13;
    string amphur = 14;
    string tambol = 15;
    string moo = 16;
    string typearea = 17;
    string dUpdate = 18;
  }

  repeated Person data = 2;
}

message OpdRequest {

  message Opd {
    string hospcode = 1;
    string hn = 2;
    string clinic = 3;
    string dateServ = 4;
    string timeServ = 5;
    string seq = 6;
    string chiefcomp = 7;
    uint32 btemp = 8;
    uint32 sbp = 9;
    uint32 dbp = 10;
    uint32 pr = 11;
    uint32 rr = 12;
    string typein = 13;
    string typeout = 14;
    string insType = 15;
    string insNumber = 16;
    string InsHospmain = 17;
    string InsHospsub = 18;
    string diagText = 19;
    string dUpdate = 20;
  }

  repeated Opd data = 2;
}

